# rust-paddle-ocr

./: .gitignore  CLAUDE.md  Cargo.toml  README.ja.md  README.ko.md  README.md  README.zh.md  SKILL.md  add_path.sh  build.rs  rocr.h  test_ffi.py
.github/workflows/: rust.yml
benches/: bench_metrics.rs
demo/: c_demo.c  python_demo.py
docs/: api-reference.md  code-analysis.md  code-explanation.md  documentation-automation.md  examples.md  interactive-examples.md  quick-start.md  troubleshooting.md
examples/: cropping_benchmark.rs  multi_thread.rs  simple.rs
references/: api-reference.md  architecture.md  performance.md  quick-start.md
scripts/: batch_ocr.py  image_preprocessor.py  model_downloader.py  ocr_benchmark.py
src/: capi.rs  det.rs  efficient_cropping.rs  engine.rs  error.rs  lib.rs  main.rs  rec.rs
