[package]
name = "rust-paddle-ocr"
version = "1.0.0"
edition = "2021"
authors = ["ChenZibo <qw.54@163.com>"]
readme = "README.md"
repository = "https://github.com/zibo-chen/rust-paddle-ocr"
license = "Apache-2.0"
description = "A lightweight and efficient OCR library based on PaddleOCR models, using the MNN inference framework for high-performance text detection and recognition"
keywords = [
    "ocr",
    "paddleocr",
    "text-recognition",
    "machine-learning",
    "computer-vision",
]
categories = ["computer-vision", "text-processing", "multimedia"]
documentation = "https://docs.rs/rust-paddle-ocr"
homepage = "https://github.com/zibo-chen/rust-paddle-ocr"
exclude = [
    "assets/*",
    "examples/*",
    "tests/*",
    "benches/*",
    "*.png",
    "*.jpg",
    "res/*",
]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
image = "0.25.6"
imageproc = "0.25"
ndarray = { version = "0.16", features = ["rayon", "serde"] }
thiserror = "2"
log = "0.4"
env_logger = "0.10"

[dependencies.mnn]
git = "https://github.com/zibo-chen/mnn-rs.git"
features = ["opencl"]
