[package]
name = "rust-paddle-ocr"
version = "1.4.2"
edition = "2021"
authors = ["ChenZibo <qw.54@163.com>"]
readme = "README.md"
repository = "https://github.com/zibo-chen/rust-paddle-ocr"
license = "Apache-2.0"
description = "A lightweight and efficient OCR library based on PaddleOCR models, using the MNN inference framework for high-performance text detection and recognition"
keywords = [
    "ocr",
    "paddleocr",
    "text-recognition",
    "machine-learning",
    "computer-vision",
]
categories = ["computer-vision", "text-processing", "multimedia"]
documentation = "https://docs.rs/rust-paddle-ocr"
homepage = "https://github.com/zibo-chen/rust-paddle-ocr"
exclude = [
    "assets/*",
    "examples/*",
    "tests/*",
    "benches/*",
    "*.png",
    "*.jpg",
    "res/*",
]

[features]
default = ["fast_resize"]
v5 = []
fast_resize = ["fast_image_resize"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "ocr"
path = "src/main.rs"

[dependencies]
image = "0.25.6"
imageproc = "0.25"
ndarray = { version = "0.16", features = ["rayon", "serde"] }
thiserror = "2"
log = "0.4"
env_logger = "0.10"
crossbeam-channel = "0.5"
once_cell = "1.17"

clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
fast_image_resize = { version = "5.3.0", features = ["image"], optional = true }
rayon = "1.10"

[build-dependencies]
cbindgen = "0.24"

[dependencies.mnn]
git = "https://github.com/zibo-chen/mnn-rs.git"
# path = "../mnn-rs"
features = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_metrics"
harness = false
